@@ -209,15 +209,15 @@
     },
     "simple_phased_threshold": {
         "trigger_time": [
-            6251.478555073824,
-            6611.510437561263,
-            14572.516978453941,
-            8645.883106007941,
-            12805.640000509444,
-            6682.579553175033,
-            10513.32334972186,
-            7782.376914580241,
-            2218.7562229808054
+            6939.478555073824,
+            6886.510437561263,
+            15029.516978453941,
+            8868.883170011683,
+            13204.640000509447,
+            6756.579553175033,
+            10906.32334972186,
+            8502.37691458024,
+            2521.7562229808054
         ],
         "triggered": [
             true,
